# survey-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  compose.yaml  pyproject.toml
src/bot/: __init__.py  create_bot.py  main.py  states.py
src/bot/core/: config.py
src/bot/db/: __init__.py  database.py
src/bot/handlers/: __init__.py  creation.py  menu.py  passing.py  start.py  stats.py
src/bot/keyboards/: __init__.py  common.py
src/bot/locales/ru/: bot.ftl
src/bot/middlewares/: common.py
src/bot/models/: __init__.py  user.py
src/bot/repositories/: __init__.py  user.py
src/survey-service/core/: config.py
src/survey_service/: main.py
src/survey_service/core/: config.py
src/survey_service/db/: database.py  models.py  queries.py
src/survey_service/schemas/: schemas.py
