[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sanbob", email = "saintsanbob@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
bot = "bot:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
