[project]
name = "bot"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "sanbob", email = "saintsanbob@gmail.com" },
    { name = "zpenr", email = "zpenr@bk.ru" },
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.0",
    "aiogram-i18n[compiler]>=1.5",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
bot = "bot:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
