[project]
name = "bot"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "sanbob", email = "saintsanbob@gmail.com" },
    { name = "zpenr", email = "zpenr@bk.ru" },
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.0",
    "aiogram-i18n[compiler]>=1.5",
    "pydantic-settings>=2.14.2",
    "survio",
]

[project.scripts]
bot = "bot:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkinit>=1.2.0",
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

[tool.uv.sources]
survio = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.mypy]
plugins = ["pydantic.mypy"]
